# InstaLPEQ

./: .gitignore  CMakeLists.txt  README.md
.gitea/workflows/: build.yml
.github/workflows/: build.yml
Source/: EQBand.h  EQCurveDisplay.cpp  EQCurveDisplay.h  FIREngine.cpp  FIREngine.h  LookAndFeel.cpp  LookAndFeel.h  NodeParameterPanel.cpp  NodeParameterPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SignalChainPanel.cpp  SignalChainPanel.h
